--- a/app/src/main/res/layout/activity_std_category.xml
+++ b/app/src/main/res/layout/activity_std_category.xml
@@ -12,21 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
         >
 
     </androidx.appcompat.widget.Toolbar>
 
-
-    <GridView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:id="@+id/catGridview"
+        android:id="@+id/catListview"
         android:background="#E7E0FF"
         android:gravity="center"
         android:columnWidth="100dp"
-        android:numColumns="2"
-        ></GridView>
+        android:numColumns="2"></ListView>
 
 </LinearLayout>
