--- a/app/src/main/res/layout/activity_std_sets.xml
+++ b/app/src/main/res/layout/activity_std_sets.xml
@@ -7,14 +7,14 @@
     android:orientation="vertical"
     tools:context=".StdSetsActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/set_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/purple_200"
         android:theme="@style/ThemeOverlay.AppCompat.Light"
 
-        ></android.support.v7.widget.Toolbar>
+        ></androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:layout_width="match_parent"
